--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,9 @@ apply from: "$rootDir/gradle/conf/jacoco.gradle"
 
 group = 'io.wisetime'
 archivesBaseName = 'wisetime-connector'
-version = '1.1-SNAPSHOT'
+if (version == 'unspecified') {
+    version = '1.1-SNAPSHOT'
+}
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 mainClassName = 'io.wisetime.connector.example.FolderWatchConnectApp'
