--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ sourceSets {
 ext.jacocoLimits = [
         'instruction': 74,
         'line'       : 74,
-        'method'     : 78,
+        'method'     : 77,
         'class'      : 90
 ]
 
@@ -111,6 +111,7 @@ dependencies {
     compile 'org.apache.commons:commons-collections4:4.2'
     compile 'com.google.guava:guava:25.1-jre'
     compile 'commons-io:commons-io:2.6'
+    compile 'commons-beanutils:commons-beanutils:1.9.3'
 
     compile 'org.xerial:sqlite-jdbc:3.23.1'
     compile 'org.codejargon:fluentjdbc:1.8.3'
