WT-7131 do not hard code artifact names; and ignore db files created during tests

--- a/gradle/publish_s3_repo.gradle
+++ b/gradle/publish_s3_repo.gradle
@@ -9,7 +9,7 @@ publishing {
     }
     publications {
         mavenJava(MavenPublication) {
-            artifactId 'wisetime-inprotech-connector'
+            artifactId project.name
             // version is set via plugin
             from components.java
         }
