Add fail on non-200 and show error msg, if any

--- a/.drone.yml
+++ b/.drone.yml
@@ -57,15 +57,12 @@ steps:
   - name: cascade-to-bamboo
     image: buildpack-deps:stretch-curl
     environment:
-      AWS_ACCESS_KEY_ID:
-        from_secret: aws-publish-id
       BAMBOO_USER:
         from_secret: bamboo-user
       BAMBOO_PASS:
         from_secret: bamboo-pass
     commands:
-      - echo $${AWS_ACCESS_KEY_ID}
-      - echo $${BAMBOO_USER}
+      - echo "Caccade to artifact via user $${BAMBOO_USER}"
       - ./bin/cascade.sh
     when:
       branch:
@@ -135,7 +132,7 @@ get:
 kind: secret
 name: bamboo-user
 get:
-  path: drone/trigger/bamboo
+  path: drone/bamboo/trigger
   name: bamboo-user
 
 ---
