--- a/build.gradle
+++ b/build.gradle
@@ -87,23 +87,20 @@ sourceSets {
     }
 }
 
-if (getGradle().getStartParameter().getTaskRequests().toString().contains("closeAndReleaseRepository")) {
+def taskRequestString = getGradle().getStartParameter().getTaskRequests().toString()
+if (taskRequestString.contains("closeAndReleaseRepository")) {
     apply from: "$rootDir/gradle/publish_maven_central.gradle"
-} else if (getGradle().getStartParameter().getTaskRequests().toString().contains("publish")) {
+} else if (taskRequestString.contains("publish")) {
     apply from: "$rootDir/gradle/publish_s3_repo.gradle"
 }
 
-if (getGradle().getStartParameter().getTaskRequests().toString().contains("dependencyUpdates")) {
+if (taskRequestString.contains("dependencyUpdates") || taskRequestString.contains("versionCheck")) {
     // add exclusions for reporting on updates and vulnerabilities
-    apply from: "$rootDir/gradle/dependencyUpdates.gradle"
-}
-
-if (getGradle().getStartParameter().getTaskRequests().toString().contains("versionCheck")) {
     apply from: "$rootDir/gradle/versionPluginConfig.gradle"
 }
 
 dependencies {
-    compile ('io.wisetime:wise-log-aws:2.8') {
+    compile('io.wisetime:wise-log-aws:3.1.0') {
         exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
         exclude group: 'com.fasterxml.jackson.dataformat', module: 'jackson-dataformat-cbor'
     }
@@ -136,7 +133,7 @@ dependencies {
     compile 'org.codejargon:fluentjdbc:1.8.3'
 
     compile 'org.apache.httpcomponents:httpcore:4.4.10'
-    compile ('org.apache.httpcomponents:fluent-hc:4.5.6') {
+    compile('org.apache.httpcomponents:fluent-hc:4.5.6') {
         exclude group: 'commons-codec', module: 'commons-codec'
     }
     compile 'commons-codec:commons-codec:1.12'
@@ -152,7 +149,7 @@ dependencies {
     compile 'io.swagger:swagger-annotations:1.5.3'
     compile 'javax.validation:validation-api:2.0.1.Final'
 
-    testCompile ('com.github.javafaker:javafaker:0.17.2') {
+    testCompile('com.github.javafaker:javafaker:0.17.2') {
         exclude group: 'org.apache.commons', module: 'commons-lang3'
     }
 
@@ -162,7 +159,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.22.0'
     testCompile 'org.objenesis:objenesis:2.6'
     testCompile 'org.assertj:assertj-core:3.12.2'
-    testCompile ('io.github.benas:random-beans:3.9.0') {
+    testCompile('io.github.benas:random-beans:3.9.0') {
         exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
         exclude group: 'org.objenesis', module: 'objenesis'
     }
@@ -198,7 +195,6 @@ task javadocJar(type: Jar) {
     from javadoc
     classifier = 'javadoc'
 }
-
 
 
 clean {
