Set depends logic into gradle build WT-7108

--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,8 @@ task buildModel(dependsOn: tasks.openApiGenerate) {
     }
 }
 
+tasks.versionCheck.dependsOn dependencyUpdates
+
 compileJava.dependsOn buildModel
 tasks.jib.dependsOn compileJava
 
