--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
         classpath "org.openapitools:openapi-generator-gradle-plugin:3.3.4"
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.20.0"
         classpath "io.wisetime:validate-version:0.2.4"
+        classpath "io.freefair.gradle:lombok-plugin:3.2.0"
+        classpath "io.wisetime:validate-version:0.2.3"
     }
 }
 
@@ -105,9 +107,10 @@ dependencies {
         exclude group: 'com.fasterxml.jackson.dataformat', module: 'jackson-dataformat-cbor'
     }
 
-    // spark-core 2.8.0 includes jetty runtime 9.4.12.v20180830
-    compile 'com.sparkjava:spark-core:2.9.0'
+    compileOnly 'org.projectlombok:lombok:1.18.6'
+    annotationProcessor 'org.projectlombok:lombok:1.18.6'
 
+    compile 'com.sparkjava:spark-core:2.9.0'
     compile('com.sparkjava:spark-template-thymeleaf:2.7.1') {
         exclude group: 'com.sparkjava', module: 'spark-core'
         exclude group: 'org.thymeleaf', module: 'thymeleaf'
