--- a/gradle/publish_maven_central.gradle
+++ b/gradle/publish_maven_central.gradle
@@ -2,6 +2,16 @@
 apply plugin: 'signing'
 apply plugin: 'io.codearte.nexus-staging'
 
+task sourcesJar(type: Jar) {
+    from sourceSets.main.allJava
+    classifier = 'sources'
+}
+
+task javadocJar(type: Jar) {
+    from javadoc
+    classifier = 'javadoc'
+}
+
 // publishing to maven central
 publishing {
     publications {
