--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,6 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.9.7'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.9.7'
 
-    compile 'info.picocli:picocli:3.7.0'
     compile 'org.apache.commons:commons-collections4:4.2'
     compile 'com.google.guava:guava:27.1-jre'
     compile 'commons-io:commons-io:2.6'
@@ -152,16 +151,9 @@ dependencies {
         exclude group: 'org.apache.commons', module: 'commons-lang3'
     }
 
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.4.2'
-    testCompile 'org.junit.jupiter:junit-jupiter-params:5.4.2'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.4.2'
+    testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
     testCompile 'org.mockito:mockito-core:2.22.0'
-    testCompile 'org.objenesis:objenesis:2.6'
     testCompile 'org.assertj:assertj-core:3.12.2'
-    testCompile('io.github.benas:random-beans:3.9.0') {
-        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-databind'
-        exclude group: 'org.objenesis', module: 'objenesis'
-    }
 }
 
 test {
