--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ plugins {
     id 'maven-publish'
     id 'application'
     id 'com.google.cloud.tools.jib' version '1.1.2'
-    id 'com.github.kt3k.coveralls' version '2.8.2'
     id "com.github.ben-manes.versions" version '0.21.0'
     id "fr.brouillard.oss.gradle.jgitver" version "0.8.0"
 
@@ -178,6 +177,7 @@ dependencies {
     testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
     testCompile 'org.mockito:mockito-core:2.27.0'
     testCompile 'org.assertj:assertj-core:3.12.2'
+    testCompile 'io.github.benas:random-beans:3.9.0'
 }
 
 test {
