[WT-7859] Add timer to renew aws credentials via managed config.

--- a/build.gradle
+++ b/build.gradle
@@ -207,3 +207,11 @@ clean {
     delete "${projectDir}/pom.xml"
     delete "${projectDir}/src/gen/java"
 }
+
+jar {
+    afterEvaluate  {
+        manifest {
+            attributes 'Implementation-Version': project.version
+        }
+    }
+}
