--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,7 @@ buildscript {
     dependencies {
         classpath "org.openapitools:openapi-generator-gradle-plugin:3.3.4"
         classpath "io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.20.0"
-        classpath "io.freefair.gradle:lombok-plugin:3.2.1"
-        classpath "io.wisetime:validate-version:[0.2.6,)"
+        classpath "io.wisetime:validate-version:[0.5.3,)"
     }
 }
 
@@ -28,9 +27,10 @@ plugins {
     id 'maven'
     id 'maven-publish'
     id 'application'
+    id("io.freefair.lombok").version("3.8.4")
     id 'com.google.cloud.tools.jib' version '1.1.2'
-    id "com.github.ben-manes.versions" version '0.21.0'
-    id "fr.brouillard.oss.gradle.jgitver" version "0.8.0"
+    id "com.github.ben-manes.versions" version '0.22.0'
+    id "fr.brouillard.oss.gradle.jgitver" version "0.9.1"
 
 }
 
@@ -107,10 +107,10 @@ if (taskRequestString.contains("dependencyUpdates") || taskRequestString.contain
 
 dependencies {
 
-    compileOnly 'org.projectlombok:lombok:1.18.6'
-    annotationProcessor 'org.projectlombok:lombok:1.18.6'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 
-    compile 'com.sparkjava:spark-core:2.9.0'
+    compile 'com.sparkjava:spark-core:2.9.1'
     compile('com.sparkjava:spark-template-thymeleaf:2.7.1') {
         exclude group: 'com.sparkjava', module: 'spark-core'
         exclude group: 'org.thymeleaf', module: 'thymeleaf'
@@ -143,7 +143,7 @@ dependencies {
     compile 'com.google.guava:guava:27.1-jre'
     compile 'commons-io:commons-io:2.6'
 
-    compile 'org.xerial:sqlite-jdbc:3.27.2.1'
+    compile 'org.xerial:sqlite-jdbc:3.28.0'
     compile 'org.codejargon:fluentjdbc:1.8.3'
 
     compile ('org.apache.httpcomponents:httpclient:4.5.8') {
@@ -174,7 +174,7 @@ dependencies {
         exclude group: 'org.apache.commons', module: 'commons-lang3'
     }
     testCompile 'org.skyscreamer:jsonassert:1.5.0'
-    testCompile 'org.junit.jupiter:junit-jupiter:5.4.2'
+    testCompile 'org.junit.jupiter:junit-jupiter:5.5.1'
     testCompile 'org.mockito:mockito-core:2.27.0'
     testCompile 'org.assertj:assertj-core:3.12.2'
     testCompile 'io.github.benas:random-beans:3.9.0'
