Update version checker plugin usage

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,16 @@
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        maven {
+            setUrl "https://s3.eu-central-1.amazonaws.com/artifacts.wisetime.com/mvn2/plugins"
+            content {
+                includeGroup("io.wisetime.versionChecker")
+            }
+        }
+    }
+}
+
 enableFeaturePreview('STABLE_PUBLISHING')
 rootProject.name = 'wisetime-connector'
+
