--- a/.drone.yml
+++ b/.drone.yml
@@ -36,7 +36,7 @@ steps:
       GRADLE_USER_HOME: .gcache
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.internal.launcher.welcomeMessageEnabled=false
     commands:
-      - ./gradlew versionCheck
+      - ./gradlew dependencyUpdates -DoutputFormatter=json versionCheck
     when:
       branch:
         exclude:
