--- a/gradle/publish_maven_central.gradle
+++ b/gradle/publish_maven_central.gradle
@@ -1,6 +1,7 @@
 
 apply plugin: 'signing'
 apply plugin: 'io.codearte.nexus-staging'
+apply plugin: 'de.marcphilipp.nexus-publish'
 
 task sourcesJar(type: Jar) {
     from sourceSets.main.allJava
