WT-8232 fix publishing

--- a/gradle/publish_maven_central.gradle
+++ b/gradle/publish_maven_central.gradle
@@ -83,3 +83,9 @@ nexusStaging {
     username = project.hasProperty('ossrhUsername') ? ossrhUsername : ""
     password = project.hasProperty('ossrhPassword') ? ossrhPassword : ""
 }
+
+nexusPublishing {
+    repositories {
+        sonatype()
+    }
+}
