WT-8651 reduce connector health check to once a minute

--- a/gradle/versionPluginConfig.gradle
+++ b/gradle/versionPluginConfig.gradle
@@ -26,6 +26,7 @@ tasks.dependencyUpdates {
     revision = "release"
     outputFormatter = "json"
     reportfileName = "report"
+    outputDir = "$projectDir/build/dependencyUpdates"
 }
 
 tasks.versionCheck.dependsOn(dependencyUpdates)
