--- a/build.gradle
+++ b/build.gradle
@@ -99,6 +99,10 @@ if (taskRequestString.contains("closeAndReleaseRepository")) {
 } else if (taskRequestString.contains("publish")) {
     apply from: "$rootDir/gradle/publish_s3_repo.gradle"
 }
+if (taskRequestString.contains("dependencyUpdates") || taskRequestString.contains("versionCheck")) {
+    // add exclusions for reporting on updates and vulnerabilities
+    apply from: "$rootDir/gradle/versionPluginConfig.gradle"
+}
 
 dependencies {
 
