--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ plugins {
     id 'com.google.cloud.tools.jib' version '1.1.2'
     id "fr.brouillard.oss.gradle.jgitver" version "0.9.1"
     id "com.github.ben-manes.versions" version "0.22.0"
-    id "io.wisetime.versionChecker" version "0.7.10"
+    id "io.wisetime.versionChecker" version "0.8.0-0"
     id 'de.marcphilipp.nexus-publish' version '0.3.1' apply false
 }
 
@@ -138,8 +138,8 @@ dependencies {
     }
 
     //  required by AWS SDK to log to logback via slf4j
-    compile 'org.slf4j:jcl-over-slf4j:1.7.26'
-    compile 'org.slf4j:jul-to-slf4j:1.7.26'
+    compile 'org.slf4j:jcl-over-slf4j:1.7.30'
+    compile 'org.slf4j:jul-to-slf4j:1.7.30'
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
     compile 'com.fasterxml.jackson.core:jackson-core:2.9.8'
