--- a/build.gradle
+++ b/build.gradle
@@ -135,7 +135,7 @@ dependencies {
     compile 'org.slf4j:jul-to-slf4j:1.7.30'
 
     compile 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
-    compile 'com.fasterxml.jackson.core:jackson-core:2...1.'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.11.1'
     compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.11.1'
 
     compile 'org.apache.commons:commons-collections4:4.3'
