--- a/gradle/conf/jacoco.gradle
+++ b/gradle/conf/jacoco.gradle
@@ -1,5 +1,15 @@
 apply plugin: "jacoco"
 
+ext {
+    jacocoExcludes = [
+        'io/wisetime/connector/time_poster/**',
+        // code coverage candidates:
+        'io/wisetime/connector/controller/**',
+        'io/wisetime/connector/**',
+        'io/wisetime/generated/connect/**'
+    ]
+}
+
 jacoco {
     toolVersion = "0.8.6"
 }
@@ -10,6 +20,12 @@ jacocoTestReport {
         csv.enabled false
         html.enabled true
     }
+    sourceDirectories.from = files(sourceDirectories.files.collect {
+        fileTree(dir: it, exclude: jacocoExcludes)
+    })
+    classDirectories.from = files(classDirectories.files.collect {
+        fileTree(dir: it, exclude: jacocoExcludes)
+    })
 }
 
 jacocoTestCoverageVerification {
@@ -22,14 +38,6 @@ jacocoTestCoverageVerification {
                 value = 'COVEREDRATIO'
                 minimum = 0.5
             }
-            excludes = [
-                    'io.wisetime.connector.time_poster',
-
-                    // code coverage candidates:
-                    'io.wisetime.connector.controller',
-                    'io.wisetime.connector',
-                    'io.wisetime.generated.connect'
-            ]
         }
     }
 }
