--- a/.drone.yml
+++ b/.drone.yml
@@ -27,11 +27,12 @@ steps:
       GRADLE_USER_HOME: .gcache
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.internal.launcher.welcomeMessageEnabled=false
     commands:
-      - ./gradlew versionCheck
+      - ./gradlew depCheck
     when:
       branch:
         exclude:
           - master
+          - devops/*
       event:
         - push
 
@@ -42,7 +43,7 @@ steps:
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.internal.launcher.welcomeMessageEnabled=false
     commands:
       - echo ${DRONE_MACHINE}
-      - ./gradlew test depCheck check
+      - ./gradlew check
 
   - name: save-cache
     image: drillster/drone-volume-cache
