--- a/gradle/conf/jacoco.gradle
+++ b/gradle/conf/jacoco.gradle
@@ -1,20 +1,13 @@
 apply plugin: "jacoco"
 
 ext {
-    jcLineMin = 0.5
+    jcLineMin = 0.7
     jcClassMin = 0.8
-    jcInstructionMin = 0.4
+    jcInstructionMin = 0.7
 
     jacocoExcludes = [
-        'io/wisetime/connector/time_poster/**',
-        // code coverage candidates:
-        'io/wisetime/connector/controller/**',
-        'io/wisetime/generated/connect/**'
+        '**/generated/**'
     ]
-}
-
-jacoco {
-    toolVersion = "0.8.6"
 }
 
 jacocoTestReport {
@@ -23,15 +16,18 @@ jacocoTestReport {
         csv.enabled false
         html.enabled true
     }
-    sourceDirectories.from = files(sourceDirectories.files.collect {
+    sourceDirectories.setFrom files(sourceDirectories.files.collect {
         fileTree(dir: it, exclude: jacocoExcludes)
     })
-    classDirectories.from = files(classDirectories.files.collect {
+    classDirectories.setFrom files(classDirectories.files.collect {
         fileTree(dir: it, exclude: jacocoExcludes)
     })
 }
 
 jacocoTestCoverageVerification {
+    sourceDirectories.setFrom jacocoTestReport.sourceDirectories
+    classDirectories.setFrom jacocoTestReport.classDirectories
+
     violationRules {
         rule {
             // https://docs.gradle.org/4.10/javadoc/org/gradle/testing/jacoco/tasks/rules/JacocoViolationRule.html
