LB-84 add sync scope to interface

--- a/gradle/conf/jacoco.gradle
+++ b/gradle/conf/jacoco.gradle
@@ -6,7 +6,8 @@ ext {
 
     jacocoExcludes = [
         '**/generated/**',
-        'io/wisetime/connector/adjunct_keywords/*'
+        'io/wisetime/connector/adjunct_keywords/*',
+        'io/wisetime/connector/api_client/SyncScope*'
     ]
 }
 
