update drone config

--- a/.drone.yml
+++ b/.drone.yml
@@ -42,7 +42,7 @@ steps:
       GRADLE_USER_HOME: .gcache
       GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.internal.launcher.welcomeMessageEnabled=false
     commands:
-      - echo ${DRONE_MACHINE}
+      - echo ${DRONE_STAGE_MACHINE}
       - ./gradlew clean test check
 
   - name: save-cache
