--- a/gradle/conf/jacoco.gradle
+++ b/gradle/conf/jacoco.gradle
@@ -7,7 +7,8 @@ ext {
     jacocoExcludes = [
         '**/generated/**',
         'io/wisetime/connector/adjunct_keywords/*',
-        'io/wisetime/connector/api_client/SyncScope*'
+        'io/wisetime/connector/api_client/SyncScope*',
+        'io/wisetime/connector/api_client/support/*'
     ]
 }
 
